[project]
name = "pylc_cli"
version = "20240921"
description = "A small CLI tool to solve leetcode problems from your favorite text editor!"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["gql[aiohttp]", "html2text", "rich", "tomli_w", "typer"]

[project.scripts]
pylc = "pylc_cli.main:main"

[project.urls]
Homepage = "https://github.com/shiina4119/pylc"
Issues = "https://github.com/shiina4119/pylc/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
